syntax = "proto3";
package callhandling;

option go_package = ".;pb";

service Callhandling {
  rpc Ping (PingRequest)            returns (PingResponse);
  rpc CreateCall(CallRequest) returns (CallResponse) {}

  rpc Dialed(EventRequest) returns (EventResponse) {}
  rpc Ringed(EventRequest) returns (EventResponse) {}
  rpc Connected(EventRequest) returns (EventResponse) {}
  rpc Disconnected(EventRequest) returns (EventResponse) {}
  rpc Joined(EventRequest) returns (EventResponse) {}
  rpc Exited(EventRequest) returns (EventResponse) {}
  rpc Dispositioned(EventRequest) returns (EventResponse) {}
  rpc Enqueued(EventRequest) returns (EventResponse) {}
}

message Call {
  int64 call_id = 1;
  int64 sid = 2;
  int64 conversation_id = 3;
  string ANI = 4;
  string DNIS = 5;
  string status = 6;
}

message Event {
  int64 call_id = 1;
  int64 identity_id = 2;
  int64 timestamp = 3;
  string meta = 4;
}

// #################################
//          Ping
// #################################

message PingRequest {
  string data = 1;
}

message PingResponse {
  string data = 1;
}

// #################################
//          Calls
// #################################

message CallRequest {
  Call call = 1;
}

message CallResponse {
  int64 call_id = 1;
  int64 sid = 2;
  int64 conversation_id = 3;
  string ANI = 4;
  string DNIS = 5;
  string status = 6;
}

// #################################
//          Events
// #################################

message EventRequest {
  Event event = 1;
}

message EventResponse {
  int64 call_id = 1;
  int64 identity_id = 2;
  int64 timestamp = 3;
  string meta = 4;
  string type = 5;
}
